# NTK_VK_first_sem

./: .gitignore  Dockerfile  bot.py  docker-compose.yml  ogn.txt  ovu.txt  pyproject.toml  requirements.txt  sd.txt  vpp.txt
data/: all.json  inzh.json  med.json  ottp.json  vizh.json  vtop.json
